Insurance Setup Design and merged conflicts

--- a/client/src/Components/InsuranceSetup/insurancesetup.scss
+++ b/client/src/Components/InsuranceSetup/insurancesetup.scss
@@ -1,2 +1,16 @@
 .insurancesetup {
+  padding: 1%;
+
+  .insurance-footer {
+    height: "60px";
+    background-color: #000;
+  }
+  .insurance-section {
+    border: 1px solid #d3d3d3;
+    margin: 10px;
+    margin-top: 0px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-top-right-radius: 5px;
+  }
 }
