Insurance Calculation and references of insurance done

--- a/client/src/Components/RegistrationPatient/InsuranceDetails/InsuranceForm/InsuranceForm.css
+++ b/client/src/Components/RegistrationPatient/InsuranceDetails/InsuranceForm/InsuranceForm.css
@@ -40,7 +40,8 @@
 .htpl-phase1-primary-insurance-form .radio-design {
   position: absolute;
   top: 5px;
-  left: 36px; }
+  left: 36px;
+  font-size: 12px; }
 
 .htpl-phase1-primary-insurance-form .refactor-design {
   min-height: 28px;
