--- a/client/src/Components/RegistrationPatient/Billing/BillingDetails/AddBillingForm.css
+++ b/client/src/Components/RegistrationPatient/Billing/BillingDetails/AddBillingForm.css
@@ -14,6 +14,10 @@
     font-size: 15px; }
 
 .hptl-phase1-add-billing-form .Paper {
+  border: 1px solid #5f5f5f;
+  min-height: 336px; }
+
+.hptl-phase1-add-billing-form .Paper-secondary {
   border: 1px solid #5f5f5f; }
 
 .hptl-phase1-add-billing-form label {
@@ -40,18 +44,6 @@
   min-height: 28px;
   background-color: #fbfbfb;
   border: 0px; }
-
-.hptl-phase1-add-billing-form .file-name-upload {
-  margin-left: 4%;
-  margin-top: 2%; }
-
-.hptl-phase1-add-billing-form .table-detail {
-  background: "#b4e2df"; }
-
-.hptl-phase1-add-billing-form th,
-.hptl-phase1-add-billing-form td {
-  border-right: 1px solid #e6e6e6;
-  font-size: 11px; }
 
 .hptl-phase1-add-billing-form .modal-container {
   position: relative; }
