--- a/client/src/Components/RegistrationPatient/PatientDetails/PatientForm/PatientForm.scss
+++ b/client/src/Components/RegistrationPatient/PatientDetails/PatientForm/PatientForm.scss
@@ -19,8 +19,7 @@
     color: red;
   }
   label {
-    font-weight: 400;
-    font-size: 11px;
+    font-size: 0.7rem;
   }
 
   .centerAlign {
@@ -30,7 +29,7 @@
   .text_field {
     width: 100% !important;
     background-color: #fbfbfb;
-    font-size: "12px";
+    font-size: "0.7rem";
     margin-right: "5px";
   }
 
