--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
@@ -3,11 +3,10 @@
 
 .hptl-phase1-sideMenuBar .side-menu-title {
   padding-top: 15px;
-  padding-bottom: 8px;
-  font-size: 14px;
+  font-size: 0.8rem;
   cursor: pointer; }
   .hptl-phase1-sideMenuBar .side-menu-title span {
-    font-size: 10px; }
+    font-size: 0.8rem; }
 
 .hptl-phase1-sideMenuBar .side-menu-arrow {
   margin-top: 5px; }
@@ -35,7 +34,7 @@
   color: white;
   list-style-type: none;
   cursor: pointer;
-  font-size: 14px; }
+  font-size: 0.8rem; }
 
 .hptl-phase1-sideMenuBar li:before {
   content: "";
@@ -47,13 +46,15 @@
   left: -2.75em;
   border-top: 1px solid #d3d3d3; }
 
-.hptl-phase1-sideMenuBar ul ul:before, .hptl-phase1-sideMenuBar h3:before, .hptl-phase1-sideMenuBar li:after {
-  content: '';
+.hptl-phase1-sideMenuBar ul ul:before,
+.hptl-phase1-sideMenuBar h3:before,
+.hptl-phase1-sideMenuBar li:after {
+  content: "";
   display: block;
   width: 1em;
   height: 1em;
   top: 1em;
-  left: .4em; }
+  left: 0.4em; }
 
 .hptl-phase1-sideMenuBar .close-menu {
   padding-top: 5px;
