--- a/client/src/Components/OPBilling/DisplayInsuranceDetails/PrimaryInsurance/PrimaryInsuranceDetails.scss
+++ b/client/src/Components/OPBilling/DisplayInsuranceDetails/PrimaryInsurance/PrimaryInsuranceDetails.scss
@@ -5,17 +5,17 @@
 
 .htpl-primary-display-insurance-form {
   .primary-details {
-    padding: 5px;
+    //padding: 5px;
     border-right: 1px solid #000;
-    .primary-box-container {
-      padding: 5px;
-    }
+    // .primary-box-container {
+    //   padding: 5px;
+    // }
   }
 
   .secondary-details {
-    padding: 5px;
+    //  padding: 5px;
     .secondary-box-container {
-      padding: 5px;
+      // padding: 5px;
     }
   }
 
