--- a/client/src/Components/RegistrationPatient/InsuranceDetails/InsuranceDetails.scss
+++ b/client/src/Components/RegistrationPatient/InsuranceDetails/InsuranceDetails.scss
@@ -1,5 +1,5 @@
 .hptl-phase1-insurance-details {
-  background: #f2f2f2;
+  //background: #f2f2f2;
   .insurance-section {
     border: 1px solid #d3d3d3;
     margin: 10px;
@@ -12,7 +12,7 @@
   .toggle-section {
     margin: 10px;
     margin-bottom: 0px;
-    background-color: #f2f2f2;
+    // background-color: #f2f2f2;
   }
   .newadd-button {
     padding: "2px";
