--- a/client/src/Components/RegistrationPatient/PatientDetails/OtherInfo/OtherInfo.scss
+++ b/client/src/Components/RegistrationPatient/PatientDetails/OtherInfo/OtherInfo.scss
@@ -17,15 +17,15 @@
     background: none;
     color: red;
   }
-  label {
-    font-weight: 400;
-    font-size: 12px;
-  }
+  // label {
+  //   font-weight: 400;
+  //   font-size: 12px;
+  // }
 
   .text_field {
     width: 100% !important;
     background-color: #fbfbfb;
-    font-size: "12px";
+    //  font-size: "12px";
     margin-right: "5px";
   }
 
@@ -43,7 +43,7 @@
         cursor: pointer;
         margin-left: -1px;
         margin-right: -1px;
-        font-size: 11px;
+        // font-size: 11px;
       }
       .preview-image {
         position: absolute;
