--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -1,5 +1,7 @@
+body {
+  line-height: 1.2; }
+
 :global .tab-container .tab-button {
-  font-size: 12px;
   font-weight: normal;
   border-radius: 0px;
   background-color: #f3f3f3;
@@ -40,7 +42,6 @@
     min-width: 100%;
     min-height: 100%; }
   :global .image-drop-area .drop-message {
-    font-size: 14px;
     color: #485a63;
     margin: 8px 0px;
     min-width: 130px;
@@ -55,7 +56,6 @@
     min-width: 100%;
     min-height: 100%; }
   :global .image-ins-drop-area .drop-message {
-    font-size: 14px;
     color: #485a63;
     margin: 8px 0px;
     min-width: 130px;
@@ -93,7 +93,6 @@
       left: 3px; }
 
 :global .htpl1-phase1-btn-primary {
-  font-size: 14px;
   font-weight: bold;
   border-radius: 2px;
   background-color: #44b6ae;
@@ -114,7 +113,6 @@
     cursor: not-allowed; }
 
 :global .htpl1-phase1-btn-secondary {
-  font-size: 14px;
   font-weight: bold;
   border-radius: 2px;
   background-color: #fff;
@@ -136,7 +134,6 @@
     cursor: not-allowed; }
 
 :global .htpl1-phase1-btn-others {
-  font-size: 14px;
   font-weight: bold;
   border-radius: 2px;
   background-color: #5f5f5f;
@@ -398,11 +395,111 @@ body {
 .tab-container nav li label {
   padding-top: "2px"; }
 
-.style_Label {
-  margin-bottom: "0px !important"; }
+label {
+  margin-bottom: 0px;
+  font-size: 0.7rem;
+  font-weight: 100;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased !important; }
 
 input[type="text"] {
-  font-size: 14px; }
+  font-size: 0.8rem; }
 
 DayPickerInput {
   border-bottom: 1px dashed #000; }
+
+.primary-details {
+  padding-bottom: 10px; }
+
+/*
+ for dropdown list
+*/
+.Select-menu-outer {
+  font-size: 0.8rem; }
+
+.Select-multi-value-wrapper {
+  font-size: 0.8rem; }
+
+.Select-placeholder,
+.Select--single > .Select-control .Select-value {
+  padding-left: 0px; }
+
+.col,
+.col-1,
+.col-10,
+.col-11,
+.col-12,
+.col-2,
+.col-3,
+.col-4,
+.col-5,
+.col-6,
+.col-7,
+.col-8,
+.col-9,
+.col-auto,
+.col-lg,
+.col-lg-1,
+.col-lg-10,
+.col-lg-11,
+.col-lg-12,
+.col-lg-2,
+.col-lg-3,
+.col-lg-4,
+.col-lg-5,
+.col-lg-6,
+.col-lg-7,
+.col-lg-8,
+.col-lg-9,
+.col-lg-auto,
+.col-md,
+.col-md-1,
+.col-md-10,
+.col-md-11,
+.col-md-12,
+.col-md-2,
+.col-md-3,
+.col-md-4,
+.col-md-5,
+.col-md-6,
+.col-md-7,
+.col-md-8,
+.col-md-9,
+.col-md-auto,
+.col-sm,
+.col-sm-1,
+.col-sm-10,
+.col-sm-11,
+.col-sm-12,
+.col-sm-2,
+.col-sm-3,
+.col-sm-4,
+.col-sm-5,
+.col-sm-6,
+.col-sm-7,
+.col-sm-8,
+.col-sm-9,
+.col-sm-auto,
+.col-xl,
+.col-xl-1,
+.col-xl-10,
+.col-xl-11,
+.col-xl-12,
+.col-xl-2,
+.col-xl-3,
+.col-xl-4,
+.col-xl-5,
+.col-xl-6,
+.col-xl-7,
+.col-xl-8,
+.col-xl-9,
+.col-xl-auto {
+  padding-right: 10px;
+  padding-left: 10px; }
+
+.moveRadioButtons {
+  padding-left: 3px; }
+  .moveRadioButtons label {
+    cursor: pointer; }
+  .moveRadioButtons input[type="radio"] {
+    cursor: pointer; }
