--- a/client/src/Components/OPBilling/OPBilling/AddOPBillingDetails/AddOPBillingForm.scss
+++ b/client/src/Components/OPBilling/OPBilling/AddOPBillingDetails/AddOPBillingForm.scss
@@ -4,19 +4,19 @@
 }
 
 .hptl-phase1-op-add-billing-form {
-  .primary-details {
-    padding: 10px;
-    .primary-box-container {
-      padding: 13px;
-    }
-  }
+  // .primary-details {
+  //   padding: 10px;
+  //   .primary-box-container {
+  //     padding: 13px;
+  //   }
+  // }
 
-  .secondary-details {
-    padding: 10px;
-    .secondary-box-container {
-      padding: 5px;
-    }
-  }
+  // .secondary-details {
+  //   padding: 10px;
+  //   .secondary-box-container {
+  //     padding: 5px;
+  //   }
+  // }
 
   label {
     font-weight: 400;
