--- a/client/src/Components/RegistrationPatient/Billing/BillingDetails/AddBillingForm.css
+++ b/client/src/Components/RegistrationPatient/Billing/BillingDetails/AddBillingForm.css
@@ -5,7 +5,8 @@
 .hptl-phase1-add-billing-form .primary-details {
   padding: 10px; }
   .hptl-phase1-add-billing-form .primary-details .primary-box-container {
-    padding: 6px; }
+    padding-top: 6px;
+    padding-left: 10px; }
   .hptl-phase1-add-billing-form .primary-details .last-box-container {
     padding: 5px; }
   .hptl-phase1-add-billing-form .primary-details .last-box-label {
@@ -19,10 +20,6 @@
 
 .hptl-phase1-add-billing-form .Paper-secondary {
   border: 1px solid #5f5f5f; }
-
-.hptl-phase1-add-billing-form label {
-  font-weight: 400;
-  font-size: 11px; }
 
 .hptl-phase1-add-billing-form .boderlabel {
   border-bottom: 1px dashed #000; }
