--- a/client/src/Components/RegistrationPatient/Billing/BillingDetails/AddBillingForm.scss
+++ b/client/src/Components/RegistrationPatient/Billing/BillingDetails/AddBillingForm.scss
@@ -8,7 +8,9 @@
     padding: 10px;
 
     .primary-box-container {
-      padding: 6px;
+      // padding: 6px;
+      padding-top: 6px;
+      padding-left: 10px;
     }
 
     .last-box-container {
@@ -32,10 +34,10 @@
     border: 1px solid #5f5f5f;
   }
 
-  label {
-    font-weight: 400;
-    font-size: 11px;
-  }
+  // label {
+  //   font-weight: 400;
+  //   font-size: 11px;
+  // }
 
   .boderlabel {
     border-bottom: 1px dashed #000;
