--- a/client/src/Components/RegistrationPatient/ConsultationDetails/ConsultationForm/ConsultationForm.scss
+++ b/client/src/Components/RegistrationPatient/ConsultationDetails/ConsultationForm/ConsultationForm.scss
@@ -1,5 +1,5 @@
 .hptl-phase1-consultation-details {
-  background: #f2f2f2;
+  //background: #f2f2f2;
   .consultation-section {
     border: 1px solid #d3d3d3;
     margin: 10px;
@@ -15,22 +15,19 @@
 }
 .hptl-phase1-add-consultation-form {
   .primary-details {
-    padding: 20px;
     border-right: 1px solid #000;
-    @media only screen and (max-width: 904px) {
-      padding: 10px;
-    }
+
     .primary-box-container {
-      padding: 5px;
       .radio-design {
         position: absolute;
-        top: 5px;
-        left: 36px;
+        margin-left: 5px;
+        // top: 5px;
+        //  left: 36px;
       }
     }
   }
   .secondary-details {
-    padding: 10px;
+    padding: 5px;
     .secondary-box-container {
       padding: 5px;
     }
@@ -43,14 +40,14 @@
     background: none;
     color: red;
   }
-  label {
-    font-weight: 400;
-    font-size: 12px;
-  }
+  // label {
+  //   font-weight: 400;
+  //   font-size: 12px;
+  // }
   th,
   td {
     border-right: 1px solid #e6e6e6;
-    font-size: 11px;
+    // font-size: 11px;
     width: 10px;
   }
 }
