--- a/client/src/Components/RegistrationPatient/ConsultationDetails/MLCPatient/MLCPatient.scss
+++ b/client/src/Components/RegistrationPatient/ConsultationDetails/MLCPatient/MLCPatient.scss
@@ -16,10 +16,10 @@
     background: none;
     color: red;
   }
-  label {
-    font-weight: 400;
-    font-size: 12px;
-  }
+  // label {
+  //   font-weight: 400;
+  //   font-size: 12px;
+  // }
 
   .secondary-details {
     padding: 10px;
@@ -35,7 +35,7 @@
         cursor: pointer;
         margin-left: -1px;
         margin-right: -1px;
-        font-size: 11px;
+        //  font-size: 11px;
       }
       .preview-image {
         position: absolute;
