--- a/client/src/Components/RegistrationPatient/InsuranceDetails/InsuranceDetails.css
+++ b/client/src/Components/RegistrationPatient/InsuranceDetails/InsuranceDetails.css
@@ -1,17 +1,16 @@
-.hptl-phase1-insurance-details {
-  background: #f2f2f2; }
-  .hptl-phase1-insurance-details .insurance-section {
-    border: 1px solid #d3d3d3;
-    margin: 10px;
-    margin-top: 0px;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    border-top-right-radius: 5px;
-    background: #ffff; }
-  .hptl-phase1-insurance-details .toggle-section {
-    margin: 10px;
-    margin-bottom: 0px;
-    background-color: #f2f2f2; }
-  .hptl-phase1-insurance-details .newadd-button {
-    padding: "2px";
-    margin-bottom: "-10px"; }
+.hptl-phase1-insurance-details .insurance-section {
+  border: 1px solid #d3d3d3;
+  margin: 10px;
+  margin-top: 0px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
+  background: #ffff; }
+
+.hptl-phase1-insurance-details .toggle-section {
+  margin: 10px;
+  margin-bottom: 0px; }
+
+.hptl-phase1-insurance-details .newadd-button {
+  padding: "2px";
+  margin-bottom: "-10px"; }
