--- a/client/src/Components/RegistrationPatient/InsuranceDetails/InsuranceForm/InsuranceForm.css
+++ b/client/src/Components/RegistrationPatient/InsuranceDetails/InsuranceForm/InsuranceForm.css
@@ -3,22 +3,12 @@
   border-radius: 5px; }
 
 .htpl-phase1-primary-insurance-form .primary-details {
-  padding: 5px;
   padding-bottom: 15px;
   border-right: 1px solid #000; }
-  @media only screen and (max-width: 904px) {
-    .htpl-phase1-primary-insurance-form .primary-details {
-      padding: 5px; } }
-  .htpl-phase1-primary-insurance-form .primary-details .primary-box-container {
-    padding: 5px; }
 
 .htpl-phase1-primary-insurance-form mark {
   background: none;
   color: red; }
-
-.htpl-phase1-primary-insurance-form label {
-  font-weight: 400;
-  font-size: 11px; }
 
 .htpl-phase1-primary-insurance-form .centerAlign {
   text-align: center; }
@@ -30,7 +20,6 @@
 .htpl-phase1-primary-insurance-form .text_field {
   width: 100% !important;
   background-color: #fbfbfb;
-  font-size: "12px";
   margin-right: "5px"; }
 
 .htpl-phase1-primary-insurance-form .form-details {
@@ -40,8 +29,7 @@
 .htpl-phase1-primary-insurance-form .radio-design {
   position: absolute;
   top: 5px;
-  left: 36px;
-  font-size: 12px; }
+  left: 36px; }
 
 .htpl-phase1-primary-insurance-form .refactor-design {
   min-height: 28px;
@@ -53,23 +41,16 @@
   margin-top: 2%; }
 
 .htpl-phase1-primary-insurance-form .secondary-details {
-  padding: 5px;
   padding-bottom: 15px; }
-  .htpl-phase1-primary-insurance-form .secondary-details .secondary-box-container {
-    padding: 5px; }
-    .htpl-phase1-primary-insurance-form .secondary-details .secondary-box-container .attach-design {
-      background: #8c8c8c;
-      min-height: 30px;
-      color: #fff;
-      padding: 5px;
-      position: relative;
-      top: 99px;
-      cursor: pointer;
-      margin-left: -1px;
-      margin-right: -1px;
-      font-size: 11px; }
-    .htpl-phase1-primary-insurance-form .secondary-details .secondary-box-container .preview-image {
-      position: absolute;
-      top: -1px;
-      left: 15px;
-      height: 101px; }
+  .htpl-phase1-primary-insurance-form .secondary-details .secondary-box-container .attach-design {
+    background: #8c8c8c;
+    color: #fff;
+    position: relative;
+    cursor: pointer;
+    margin-left: -1px;
+    margin-right: -1px; }
+  .htpl-phase1-primary-insurance-form .secondary-details .secondary-box-container .preview-image {
+    position: absolute;
+    top: -1px;
+    left: 15px;
+    height: 101px; }
