--- a/client/src/Components/RegistrationPatient/InsuranceDetails/InsuranceForm/InsuranceForm.scss
+++ b/client/src/Components/RegistrationPatient/InsuranceDetails/InsuranceForm/InsuranceForm.scss
@@ -5,25 +5,19 @@
 
 .htpl-phase1-primary-insurance-form {
   .primary-details {
-    padding: 5px;
+    //padding: 5px;
     padding-bottom: 15px;
     border-right: 1px solid #000;
-    @media only screen and (max-width: 904px) {
-      padding: 5px;
-    }
-    .primary-box-container {
-      padding: 5px;
-    }
   }
 
   mark {
     background: none;
     color: red;
   }
-  label {
-    font-weight: 400;
-    font-size: 11px;
-  }
+  // label {
+  //   font-weight: 400;
+  //   font-size: 11px;
+  // }
 
   .centerAlign {
     text-align: center;
@@ -37,7 +31,7 @@
   .text_field {
     width: 100% !important;
     background-color: #fbfbfb;
-    font-size: "12px";
+    // font-size: "12px";
     margin-right: "5px";
   }
 
@@ -50,7 +44,7 @@
     position: absolute;
     top: 5px;
     left: 36px;
-    font-size: 12px;
+    // font-size: 12px;
   }
   .refactor-design {
     min-height: 28px;
@@ -63,21 +57,21 @@
   }
 
   .secondary-details {
-    padding: 5px;
+    //padding-top: 5px;
     padding-bottom: 15px;
     .secondary-box-container {
-      padding: 5px;
+      // padding: 5px;
       .attach-design {
         background: #8c8c8c;
-        min-height: 30px;
+        // min-height: 30px;
         color: #fff;
-        padding: 5px;
+        //padding: 5px;
         position: relative;
-        top: 99px;
+        //  top: 99px;
         cursor: pointer;
         margin-left: -1px;
         margin-right: -1px;
-        font-size: 11px;
+        //  font-size: 11px;
       }
       .preview-image {
         position: absolute;
