--- a/client/src/Components/RegistrationPatient/InsuranceDetails/SecondaryInsurance/SecondaryInsurance.css
+++ b/client/src/Components/RegistrationPatient/InsuranceDetails/SecondaryInsurance/SecondaryInsurance.css
@@ -3,18 +3,8 @@
   border-radius: 5px; }
 
 .htpl-phase1-seconary-insurance-form .primary-details {
-  padding: 5px;
   padding-bottom: 15px;
   border-right: 1px solid #000; }
-  @media only screen and (max-width: 904px) {
-    .htpl-phase1-seconary-insurance-form .primary-details {
-      padding: 5px; } }
-  .htpl-phase1-seconary-insurance-form .primary-details .primary-box-container {
-    padding: 5px; }
-
-.htpl-phase1-seconary-insurance-form label {
-  font-weight: 400;
-  font-size: 11px; }
 
 .htpl-phase1-seconary-insurance-form mark {
   background: none;
@@ -27,8 +17,7 @@
 .htpl-phase1-seconary-insurance-form .radio-design {
   position: absolute;
   top: 5px;
-  left: 36px;
-  font-size: 12px; }
+  left: 36px; }
 
 .htpl-phase1-seconary-insurance-form .go-button {
   cursor: pointer;
@@ -44,23 +33,16 @@
   margin-top: 2%; }
 
 .htpl-phase1-seconary-insurance-form .secondary-details {
-  padding: 5px;
   padding-bottom: 15px; }
-  .htpl-phase1-seconary-insurance-form .secondary-details .secondary-box-container {
-    padding: 5px; }
-    .htpl-phase1-seconary-insurance-form .secondary-details .secondary-box-container .attach-design {
-      background: #8c8c8c;
-      min-height: 30px;
-      color: #fff;
-      padding: 5px;
-      position: relative;
-      top: 99px;
-      cursor: pointer;
-      margin-left: -1px;
-      margin-right: -1px;
-      font-size: 11px; }
-    .htpl-phase1-seconary-insurance-form .secondary-details .secondary-box-container .preview-image {
-      position: absolute;
-      top: -1px;
-      left: 15px;
-      height: 101px; }
+  .htpl-phase1-seconary-insurance-form .secondary-details .secondary-box-container .attach-design {
+    background: #8c8c8c;
+    color: #fff;
+    position: relative;
+    cursor: pointer;
+    margin-left: -1px;
+    margin-right: -1px; }
+  .htpl-phase1-seconary-insurance-form .secondary-details .secondary-box-container .preview-image {
+    position: absolute;
+    top: -1px;
+    left: 15px;
+    height: 101px; }
