--- a/client/src/Components/RegistrationPatient/PatientDetails/PatientDetails.scss
+++ b/client/src/Components/RegistrationPatient/PatientDetails/PatientDetails.scss
@@ -1,5 +1,5 @@
 .hptl-phase1-patient-details {
-  background: #f2f2f2;
+  //background: #f2f2f2;
   .patient-section {
     border: 1px solid #d3d3d3;
     margin: 10px;
@@ -11,13 +11,13 @@
   .toggle-section {
     margin: 10px;
     margin-bottom: 0px;
-    background-color: #f2f2f2;
+    // background-color: #f2f2f2;
   }
 
   .text_field {
     width: 100% !important;
     background-color: #fbfbfb;
-    font-size: "11px";
+    // font-size: "11px";
     margin-right: "5px";
   }
 }
