--- a/client/src/Components/RegistrationPatient/PatientDetails/PatientForm/PatientForm.css
+++ b/client/src/Components/RegistrationPatient/PatientDetails/PatientForm/PatientForm.css
@@ -3,21 +3,11 @@
   border-radius: 5px; }
 
 .hptl-phase1-add-patient-form .primary-details {
-  padding: 5px;
   border-right: 1px solid #000; }
-  @media only screen and (max-width: 904px) {
-    .hptl-phase1-add-patient-form .primary-details {
-      padding: 5px; } }
-  .hptl-phase1-add-patient-form .primary-details .primary-box-container {
-    padding: 5px; }
 
 .hptl-phase1-add-patient-form mark {
   background: none;
   color: red; }
-
-.hptl-phase1-add-patient-form label {
-  font-weight: 400;
-  font-size: 11px; }
 
 .hptl-phase1-add-patient-form .centerAlign {
   text-align: center; }
@@ -25,26 +15,18 @@
 .hptl-phase1-add-patient-form .text_field {
   width: 100% !important;
   background-color: #fbfbfb;
-  font-size: "12px";
   margin-right: "5px"; }
 
-.hptl-phase1-add-patient-form .secondary-details {
-  padding: 5px; }
-  .hptl-phase1-add-patient-form .secondary-details .secondary-box-container {
-    padding: 5px; }
-    .hptl-phase1-add-patient-form .secondary-details .secondary-box-container .attach-design {
-      background: #8c8c8c;
-      min-height: 30px;
-      color: #fff;
-      padding: 5px;
-      position: relative;
-      top: 99px;
-      cursor: pointer;
-      margin-left: -1px;
-      margin-right: -1px;
-      font-size: 11px; }
-    .hptl-phase1-add-patient-form .secondary-details .secondary-box-container .preview-image {
-      position: absolute;
-      top: -1px;
-      left: 15px;
-      height: 101px; }
+.hptl-phase1-add-patient-form .secondary-details .secondary-box-container .attach-design {
+  background: #8c8c8c;
+  color: #fff;
+  position: relative;
+  cursor: pointer;
+  margin-left: -1px;
+  margin-right: -1px; }
+
+.hptl-phase1-add-patient-form .secondary-details .secondary-box-container .preview-image {
+  position: absolute;
+  top: -1px;
+  left: 15px;
+  height: 101px; }
