--- a/client/src/Components/RegistrationPatient/PatientDetails/PatientForm/PatientForm.scss
+++ b/client/src/Components/RegistrationPatient/PatientDetails/PatientForm/PatientForm.scss
@@ -5,23 +5,23 @@
 
 .hptl-phase1-add-patient-form {
   .primary-details {
-    padding: 5px;
+    // padding: 5px;
     border-right: 1px solid #000;
     @media only screen and (max-width: 904px) {
-      padding: 5px;
+      // padding: 5px;
     }
     .primary-box-container {
-      padding: 5px;
+      //  padding: 5px;
     }
   }
   mark {
     background: none;
     color: red;
   }
-  label {
-    font-weight: 400;
-    font-size: 11px;
-  }
+  // label {
+  //   // font-weight: 400;
+  //   font-size: $fontSize;
+  // }
 
   .centerAlign {
     text-align: center;
@@ -30,25 +30,25 @@
   .text_field {
     width: 100% !important;
     background-color: #fbfbfb;
-    font-size: "12px";
+    // font-size: $fontSize;
     margin-right: "5px";
   }
 
   .secondary-details {
-    padding: 5px;
+    //padding: 5px;
     .secondary-box-container {
-      padding: 5px;
+      // padding: 5px;
       .attach-design {
         background: #8c8c8c;
-        min-height: 30px;
+        // min-height: 30px;
         color: #fff;
-        padding: 5px;
+        // padding: 5px;
         position: relative;
-        top: 99px;
+
         cursor: pointer;
         margin-left: -1px;
         margin-right: -1px;
-        font-size: 11px;
+        // font-size: 11px;
       }
       .preview-image {
         position: absolute;
