--- a/client/src/Components/RegistrationPatient/registration.scss
+++ b/client/src/Components/RegistrationPatient/registration.scss
@@ -17,7 +17,7 @@
   .text_field {
     width: 100% !important;
     background-color: #fbfbfb;
-    font-size: "11px";
+    //font-size: $fontSize;
     margin-right: "5px";
   }
 
@@ -50,5 +50,5 @@
   }
 }
 .spacing-push {
-  margin-top: 6em;
+  // margin-top: 6em;
 }
