--- a/client/src/Components/Wrapper/wrapper.css
+++ b/client/src/Components/Wrapper/wrapper.css
@@ -18,19 +18,20 @@ div[numberbox="true"] input[type="text"] {
    React date picker customizing style
 */
 .algaeh-datePicker {
-  border-bottom: 1px solid #6c757d;
-  background-color: #fbfbfb; }
+  border-bottom: 1px solid #000;
+  max-width: 100%; }
   .algaeh-datePicker .react-date-picker__button {
-    background-color: #fbfbfb;
     border: none;
-    line-height: 1.9em; }
-    .algaeh-datePicker .react-date-picker__button .react-date-picker__clear-button {
-      display: none; }
-  .algaeh-datePicker .react-date-picker__button__icon {
-    position: relative;
-    margin-left: 60%; }
-  .algaeh-datePicker .react-calendar {
-    width: 250px; }
+    line-height: 2em; }
+  .algaeh-datePicker .react-date-picker {
+    width: 100%; }
+  .algaeh-datePicker .react-date-picker__button {
+    width: 100%; }
+  .algaeh-datePicker .react-date-picker__button__input {
+    margin-left: 0px;
+    min-width: inherit; }
+  .algaeh-datePicker button {
+    margin-left: 0px; }
 
 .table {
   width: 100%;
