--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -25,39 +25,53 @@ div[numberbox="true"] {
    React date picker customizing style
 */
 .algaeh-datePicker {
-  border-bottom: 1px solid #6c757d;
-  background-color: #fbfbfb;
-  // max-width: 90%;
+  border-bottom: 1px solid #000;
+  max-width: 100%;
   .react-date-picker__button {
-    background-color: #fbfbfb;
     border: none;
-    line-height: 1.9em;
-    .react-date-picker__clear-button {
-      // visibility: hidden;
-      display: none;
-    }
+
+    line-height: 2em;
+  }
+  .react-date-picker {
+    width: 100%;
+  }
+  .react-date-picker__button {
+    width: 100%;
   }
   .react-date-picker__button__input {
-    // min-width: 75%; //calc(4px + (4px * 3) + 10em + 5em);
+    margin-left: 0px;
+    min-width: inherit; //calc(4px + (4px * 3) + 6em + 0.434em);
   }
-  .react-date-picker__button__icon {
-    position: relative;
-    margin-left: 60%;
-  }
-  .react-calendar {
-    width: 250px;
+  button {
+    margin-left: 0px;
   }
 }
 
-// .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside) {
-//   background-color: #00bcb0 !important;
+// .algaeh-datePicker {
+//   border-bottom: 1px solid #6c757d;
+//   background-color: #fbfbfb;
+//   max-width: 90%;
+//   .react-date-picker__button {
+//     background-color: #fbfbfb;
+//     border: none;
+//     line-height: 1.9em;
+//     .react-date-picker__clear-button {
+//       // visibility: hidden;
+//       display: none;
+//     }
+//   }
+// .react-date-picker__button__input {
+//   min-width: calc(4px + (4px * 3) + 4em + 5em);
 // }
-// .DayPicker-TodayButton {
-//   color: #00bcb0 !important;
-//   padding-left: 70px;
-//   font-weight: bold;
+//.react-date-picker__button__icon {
+//  display: none;
+//position: relative;
+// margin-left: 60%;
+//}
+//   .react-calendar {
+//     width: 250px;
+//   }
 // }
-
 .table {
   width: 100%;
   border-bottom: 1.5px solid #f2f2f2;
