--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
@@ -47,13 +47,15 @@
   left: -2.75em;
   border-top: 1px solid #d3d3d3; }
 
-.hptl-phase1-sideMenuBar ul ul:before, .hptl-phase1-sideMenuBar h3:before, .hptl-phase1-sideMenuBar li:after {
-  content: '';
+.hptl-phase1-sideMenuBar ul ul:before,
+.hptl-phase1-sideMenuBar h3:before,
+.hptl-phase1-sideMenuBar li:after {
+  content: "";
   display: block;
   width: 1em;
   height: 1em;
   top: 1em;
-  left: .4em; }
+  left: 0.4em; }
 
 .hptl-phase1-sideMenuBar .close-menu {
   padding-top: 5px;
@@ -85,6 +87,3 @@
 
 .hptl-phase1-footer .app_bar {
   background: #000000; }
-
-.spacing-push {
-  margin-top: 6em; }
