Insurance Setup Added and side bar changes done

--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
@@ -24,7 +24,8 @@
   background: #000000; }
 
 .hptl-phase1-sideMenuBar ul {
-  border-left: 1px solid #d3d3d3; }
+  border-left: 1px solid #d3d3d3;
+  margin-top: -9px; }
 
 .hptl-phase1-sideMenuBar ul ul {
   margin-top: -1.25em; }
@@ -34,7 +35,9 @@
   color: white;
   list-style-type: none;
   cursor: pointer;
-  font-size: 0.8rem; }
+  font-size: 0.7rem;
+  vertical-align: middle;
+  padding-top: 8px; }
 
 .hptl-phase1-sideMenuBar li:before {
   content: "";
