--- a/client/src/Components/Advance/AdvanceModal.scss
+++ b/client/src/Components/Advance/AdvanceModal.scss
@@ -1,50 +1,15 @@
 .hptl-phase1-add-advance-form {
   background: #fff;
-  border-radius: 5px;
-  label {
-    font-weight: 400;
-    font-size: 11px;
-  }
+  // border-radius: 5px;
+  padding: 0px;
   mark {
     background: none;
     color: red;
   }
   .form-details {
-    padding: 5px;
     padding-bottom: 0px;
   }
-  .lbl-milldle {
-    padding-top: 30px;
-  }
-  .lbl-resize {
-    label {
-      font-size: 16px;
-      background: #5f5f5f;
-    }
-  }
-
-  .app_bar {
-    box-shadow: none;
-    background-color: #dbad64;
-    h2 {
-      color: #fff;
-    }
-  }
-}
-
-.bottom-details {
-  padding: 5px;
-  padding-bottom: 0px;
-  border-top: 1px solid #5f5f5f;
-  margin-top: 0.5%;
-}
-
-.colorPrimary {
-  div {
-    background-color: #dbad64;
-    box-shadow: none;
-    h2 {
-      color: #fff;
-    }
+  .button {
+    padding: 10px;
   }
 }
