--- a/client/src/Components/OPBilling/OPBilling/AddOPBillingDetails/AddOPBillingForm.css
+++ b/client/src/Components/OPBilling/OPBilling/AddOPBillingDetails/AddOPBillingForm.css
@@ -2,9 +2,14 @@
   background: #fff;
   border-radius: 5px; }
 
-.hptl-phase1-op-add-billing-form label {
-  font-weight: 400;
-  font-size: 11px; }
+.hptl-phase1-op-add-billing-form .primary-details {
+  padding: 10px; }
+  .hptl-phase1-op-add-billing-form .primary-details .primary-box-container {
+    padding-top: 12.5px;
+    padding-left: 10px; }
+
+.hptl-phase1-op-add-billing-form .secondary-details {
+  padding: 10px; }
 
 .hptl-phase1-op-add-billing-form text {
   color: #000; }
@@ -27,6 +32,7 @@
   margin-top: -10px; }
 
 .hptl-phase1-op-add-billing-form .Paper {
+  padding: 10px;
   border: 1px solid #5f5f5f; }
 
 .hptl-phase1-op-add-billing-form th,
@@ -35,5 +41,4 @@
   border-right: 1px solid #e6e6e6; }
 
 .insurance-amt-details {
-  padding: 5px;
   padding-bottom: 5px; }
