--- a/client/src/Components/OPBilling/VisitDetails/DisplayVisitDetails.scss
+++ b/client/src/Components/OPBilling/VisitDetails/DisplayVisitDetails.scss
@@ -1,5 +1,5 @@
 .hptl-display-visit-details-frame {
-  background: #f2f2f2;
+  // background: #f2f2f2;
   .visitdetails-section {
     border: 1px solid #d3d3d3;
     margin: 10px;
