--- a/client/src/Components/OPBilling/VisitDetails/DisplayVisitDetails/DisplayVisitDetails.scss
+++ b/client/src/Components/OPBilling/VisitDetails/DisplayVisitDetails/DisplayVisitDetails.scss
@@ -15,8 +15,7 @@
 }
 .hptl-display-active-visit-form {
   .form-details {
-    padding: 5px;
-    padding-bottom: 5px;
+    padding-top: 2px;
   }
   mark {
     background: none;
