--- a/client/src/Components/OPBilling/DisplayInsuranceDetails/DisplayInsuranceDetails.scss
+++ b/client/src/Components/OPBilling/DisplayInsuranceDetails/DisplayInsuranceDetails.scss
@@ -1,5 +1,5 @@
 .hptl-phase1-insuranceDis-details {
-  background: #f2f2f2;
+  // background: #f2f2f2;
   .display-insurance-section {
     border: 1px solid #d3d3d3;
     margin: 10px;
@@ -12,6 +12,6 @@
   .toggle-section {
     margin: 10px;
     margin-bottom: 0px;
-    background-color: #f2f2f2;
+    // background-color: #f2f2f2;
   }
 }
