--- a/client/src/Components/OPBilling/VisitDetails/DisplayVisitDetails/DisplayVisitDetails.css
+++ b/client/src/Components/OPBilling/VisitDetails/DisplayVisitDetails/DisplayVisitDetails.css
@@ -12,8 +12,7 @@
     margin-bottom: 0px; }
 
 .hptl-display-active-visit-form .form-details {
-  padding: 5px;
-  padding-bottom: 5px; }
+  padding-top: 2px; }
 
 .hptl-display-active-visit-form mark {
   background: none;
