--- a/client/src/Components/Wrapper/spotlight.scss
+++ b/client/src/Components/Wrapper/spotlight.scss
@@ -49,6 +49,9 @@ $black: #000;
     border: none;
     background-color: transparent;
   }
+  button {
+    margin-top: -9px;
+  }
 }
 #spotlightResultArea {
   background-color: #f9f5f4;
