--- a/client/src/Components/DoctorsWorkbench/PatientChart/patient_chart.css
+++ b/client/src/Components/DoctorsWorkbench/PatientChart/patient_chart.css
@@ -1,7 +1,11 @@
-.patient_chart .patient_demographics {
-  padding: 10px;
-  background-color: #595959;
-  color: #fff; }
-
-.patient_chart ul#menu li {
-  display: inline; }
+.patient_chart {
+  padding: 10px; }
+  .patient_chart .patient_demographics {
+    padding: 10px;
+    background-color: #595959;
+    color: #fff;
+    line-height: 14px;
+    min-width: 100%;
+    font-size: 10px; }
+    .patient_chart .patient_demographics span {
+      color: #1abc9c; }
